<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="@string/key_user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:useSimpleSummaryProvider="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:inputType="textEmailAddress"
        android:key="@string/key_user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:useSimpleSummaryProvider="true"
        android:title="@string/pref_title_email_address" />

    <ListPreference
        android:defaultValue="@string/pref_default_favorite_social"
        android:entries="@array/pref_entries_favorite_social"
        android:entryValues="@array/pref_values_favorite_social"
        android:key="user_favorite_social"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        app:useSimpleSummaryProvider="true"
        android:title="@string/pref_title_favorite_social" />

</PreferenceScreen>
